Fix for Bug #21412 (client allows DELIMITER with backslash character)